# liteserach-multimodal

./: .gitignore  LICENSE  Makefile  README.md  USAGE.md  pyproject.toml  requirements.txt
sandbox/: README.md
sandbox/code/: hello.py
sandbox/docs/: design.txt
sandbox/notes/: alpha.md  beta.md
scripts/: install.sh
semanticsd/: __main__.py  cli.py  config.py  keychain.py  logging_setup.py  paths.py  reembed.py
semanticsd/admin/: install.py  launchd.py
semanticsd/db/: connection.py  migrations.py  schema.py
semanticsd/embedders/: __init__.py  base.py  gemini.py  gemini_vision.py  local.py  ollama.py  (+6 more)
tests/: _fixtures.py  conftest.py  test_auth.py  test_config.py  test_config_interval.py  test_db.py  test_db_migrations.py  test_e2e_gemini_vision.py  test_e2e_index.py  test_e2e_multimodal.py  test_e2e_ollama_text.py  test_e2e_qwen3_vl.py  test_e2e_search.py  test_e2e_smoke.py  test_e2e_stress_battery.py  test_e2e_usage_and_reembed.py  test_e2e_vec.py  test_e2e_watcher.py  test_embedder_test_route.py  test_embedders_base.py  test_embedders_gemini.py  test_embedders_gemini_vision.py  test_embedders_local.py  test_embedders_ollama.py  test_embedders_openai.py  test_embedders_openai_compatible.py  test_embedders_qwen3_vl.py  test_embedders_registry.py  test_embedders_router.py  test_embedders_vision_base.py  test_extractors_audio.py  test_extractors_base.py  test_extractors_docx.py  test_extractors_email.py  test_extractors_epub.py  test_extractors_html.py  test_extractors_image.py  test_extractors_notebook.py  test_extractors_pdf.py  test_extractors_pptx.py  (+35 more)
(+64 files in other folders)
